# s_app_dir

./: .gitignore  Cargo.toml  README.md
doc/: search-index.js
doc/s_app_dir/: enum.XdgDir.html  index.html  sidebar-items.js  struct.AppDir.html
doc/src/s_app_dir/src/: lib.rs.html
src/: lib.rs
